--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                 </svg>
             </div>
-            <button class=" flex bg-[#ABEF5F] rounded-2xl pt-4 px-3 gap-2">
+            <button class=" flex bg-[#ABEF5F] rounded-3xl pt-4 px-3 gap-2">
                 <h2 class="text-xl font-extrabold bg-book-primary">Book Consult</h2>
                 <div class=" bg-black rounded-full p-2   mb-4 ">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -93,7 +93,31 @@
 
         </div>
     </div>
+<!-- banner section -->
 
+<div class="hero bg-base-200">
+    <div class="hero-content flex-col lg:flex-col">
+      <img
+        src="./assets/banner.png"
+        class="max-w-sm rounded-lg shadow-2xl" />
+      <div>
+        <h1 class="text-6xl font-extrabold text-center ">A barn house of this design has a<br/> striking appearance</h1>
+        <p class="py-6 text-[#737373] text-center">
+            The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+        </p>
+        <button class=" flex bg-[#cfe9b1de] rounded-3xl pt-4 px-3 gap-2 mx-auto">
+            <h2 class="text-xl font-bold bg-book-primary">View Details</h2>
+            <div class=" bg-[#ABEF5F] rounded-full p-2   mb-4 ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-4 text-black  ">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg>
+            </div>
+        </button>
+      </div>
+    </div>
+  </div>
 
 
 
