added one section

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     </div>
 <!-- banner section -->
 
-<div class="hero bg-base-200">
+<div class="hero">
     <div class="hero-content flex-col lg:flex-col">
       <img
         src="./assets/banner.png"
-        class="max-w-sm rounded-lg shadow-2xl" />
+        class="max-w-sm rounded-lg " />
       <div>
         <h1 class="text-6xl font-extrabold text-center ">A barn house of this design has a<br/> striking appearance</h1>
         <p class="py-6 text-[#737373] text-center">
@@ -118,26 +118,68 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-     </header>
+ </header>
      <!-- main -->
-     <main></main>
+     <main >
+        <div class="hero bg-base-200 space-y-7">
+            <div class="hero-content flex-col lg:flex-row-reverse gap-x-14 my-7">
+              <img
+                src="./assets/Rectangle.png"
+                class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <h1 class="text-5xl font-extrabold">We design thoughtful,<br/> liveable spaces</h1>
+                <p class="py-6 text-[#737373] text-sm">
+                    The barn house captivates with its blend of rustic charm and <br/> modern sophistication, featuring weathered wood, sleek metal accents.
+                </p>
+                <!--new card1 -->
+                <div class="hero bg-white rounded-2xl my-5">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img
+                        src="./assets/commercial.png"
+                        class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <h1 class="text-xl font-extrabold">Commercial</h1>
+                        <p class=" text-sm text-[#737373]">
+                            The barn house captivates with its blend <br/>of rustic charm and modern.
+                        </p>
+                        
+                      </div>
+                    </div>
+                  </div>
+
+                 <!-- new card 2 -->
+                 <div class="hero bg-white rounded-2xl">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img
+                        src="./assets/residential.png"
+                        class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <h1 class="text-xl font-extrabold">Residential</h1>
+                        <p class=" text-sm text-[#737373]">
+                            The barn house captivates with its blend <br/>of rustic charm and modern.
+                        </p>
+                        
+                      </div>
+                    </div>
+                  </div>
+         </div>
+          </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+     </main>
      <!-- footer -->
       <footer> </footer>
 </body>
