added unique part

--- a/index.html
+++ b/index.html
@@ -379,6 +379,36 @@
     </button>
 </form>
 </div>
+<!-- unique part -->
+<div class="w-3/4  mx-auto ">
+    <h1 class="font-black text-4xl text-center my-4">Our Sponsors</h1>
+<p class="text-[#494949] text-sm text-center mb-6"> The barn house captivates with its blend of rustic charm and modern sophistication,<br/> featuring weathered wood, sleek metal accents.</p>
+
+<div class="grid lg:grid-cols-4 gap-7 items-center justify-center">
+    <img src="./assets/sponsors/amazon.png">
+    <img src="./assets/sponsors/figma.png">
+    <img src="./assets/sponsors/google.png">
+    <img src="./assets/sponsors/spotify.png">
+    
+</div>
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
 
 
 
